--- a/SCME.MEFAViewer/MainWindow.xaml
+++ b/SCME.MEFAViewer/MainWindow.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="3*"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
         <ListView ItemsSource="{Binding MmeTiles}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" SelectedItem="{Binding SelectedMmeTile}" SelectionChanged="MmeTile_OnSelectionChanged">
             <ListView.ItemsPanel>
@@ -37,21 +37,52 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <TextBlock Grid.Column="0" Grid.Row="0" Text="LastStartTimestamp"/>
             <TextBlock Grid.Column="0" Grid.Row="1" Text="TestCounterTotal"/>
-            <TextBlock Grid.Column="0" Grid.Row="2" Text="HardwareErrorCounterTotal"/>
-            <TextBlock Grid.Column="0" Grid.Row="3" Text="LastTestTimestamp"/>
-            <TextBlock Grid.Column="0" Grid.Row="4" Text="LastSWUpdateTimestamp"/>
-            <TextBlock Grid.Column="0" Grid.Row="5" Text="ActiveProfilesCount"/>
+            <TextBlock Grid.Column="0" Grid.Row="2" Text="TestCounter"/>            
+            <TextBlock Grid.Column="0" Grid.Row="3" Text="HardwareErrorCounterTotal"/>
+            <TextBlock Grid.Column="0" Grid.Row="4" Text="HardwareErrorCounter"/>
+            <TextBlock Grid.Column="0" Grid.Row="5" Text="LastTestTimestamp"/>
+            <TextBlock Grid.Column="0" Grid.Row="6" Text="LastSWUpdateTimestamp"/>
+            <TextBlock Grid.Column="0" Grid.Row="7" Text="ActiveProfilesCount"/>
+            <TextBlock Grid.Column="0" Grid.Row="8" Text="SoftVersion"/>
+            
             
             
             <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding LastStartTimestamp}" TextAlignment="Right"/>
             <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding TestCounterTotal}"  TextAlignment="Right"/>
-            <TextBlock Grid.Column="1" Grid.Row="2" Text="{Binding HardwareErrorCounterTotal}"  TextAlignment="Right"/>
-            <TextBlock Grid.Column="1" Grid.Row="3" Text="{Binding LastTestTimestamp}"  TextAlignment="Right"/>
-            <TextBlock Grid.Column="1" Grid.Row="4" Text="{Binding LastSWUpdateTimestamp}"  TextAlignment="Right"/>
-            <TextBlock Grid.Column="1" Grid.Row="5" Text="{Binding ActiveProfilesCount}"  TextAlignment="Right"/>
+            <Grid Grid.Column="1" Grid.Row="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <DatePicker Grid.Column="0" SelectedDate="{Binding TestCounterBeginDateTime}" />
+                <DatePicker Grid.Column="1" SelectedDate="{Binding TestCounterEndDateTime}"/>
+                <TextBlock Grid.Column="2" Text="{Binding TestCounter}"/>
+            </Grid>
+            
+            <TextBlock Grid.Column="1" Grid.Row="3" Text="{Binding HardwareErrorCounterTotal}"  TextAlignment="Right"/>
+            <Grid Grid.Column="1" Grid.Row="4">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <DatePicker Grid.Column="0" SelectedDate="{Binding HardwareErrorCounterBeginDateTime}" />
+                <DatePicker Grid.Column="1" SelectedDate="{Binding HardwareErrorCounterEndDateTime}"/>
+            </Grid>
+            <TextBlock Grid.Column="1" Grid.Row="5" Text="{Binding LastTestTimestamp}"  TextAlignment="Right"/>
+            <TextBlock Grid.Column="1" Grid.Row="6" Text="{Binding LastSWUpdateTimestamp}"  TextAlignment="Right"/>
+            <TextBlock Grid.Column="1" Grid.Row="7" Text="{Binding ActiveProfilesCount}"  TextAlignment="Right"/>
+            <TextBlock Grid.Column="1" Grid.Row="8" Text="{Binding SoftVersion}"  TextAlignment="Right"/>
             
             
             
