--- a/SCME.WpfControlLibrary/Pages/SSRTUPage.xaml
+++ b/SCME.WpfControlLibrary/Pages/SSRTUPage.xaml
@@ -60,6 +60,10 @@
             </TabItem>
         </TabControl>
         <Grid Grid.Row="3" >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"  />
                 <ColumnDefinition Width="1.1*" />
@@ -69,6 +73,14 @@
             </Grid.ColumnDefinitions>
             <TextBlock Name="TextBlockValueName" />
             <TextBlock Grid.Column="1" HorizontalAlignment="Right" Name="LabelValue" Text="{Binding Result, StringFormat=N1}"/>
+            
+            <TextBlock Grid.Column="0" Grid.Row="1" Text="Ток вспомогательного питания 1" Margin="0,0,30,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliaryVoltagePowerSupply1, Converter={StaticResource B2V}}"/>
+            <TextBlock Grid.Column="1" Grid.Row="1" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliaryVoltagePowerSupply1, Converter={StaticResource B2V}}" 
+                       Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowAuxiliaryCurrentPowerSupply1}" HorizontalAlignment="Right"/>
+            
+            <TextBlock Grid.Column="3" Grid.Row="1" Text="Ток вспомогательного питания 2" Margin="0,0,30,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliaryVoltagePowerSupply2, Converter={StaticResource B2V}}"/>
+            <TextBlock Grid.Column="4" Grid.Row="1" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.ShowAuxiliaryVoltagePowerSupply2, Converter={StaticResource B2V}}" 
+                       Text="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.ShowAuxiliaryCurrentPowerSupply2}" HorizontalAlignment="Right"/>
         </Grid>
 
         <Grid Grid.Row="5" >
