--- a/SCME.WpfControlLibrary/Resources/ObjectDataProvider.xaml
+++ b/SCME.WpfControlLibrary/Resources/ObjectDataProvider.xaml
@@ -28,6 +28,7 @@
     <ObjectDataProvider x:Key="PolarityDCSwitchingVoltageApplication" MethodName="GetPolarityDCSwitchingVoltageApplication" ObjectType="{x:Type dataProviders:TestTypeEnumDictionary}"/>
     <ObjectDataProvider x:Key="SwitchingCurrentPulseShape" MethodName="GetSwitchingCurrentPulseShape" ObjectType="{x:Type dataProviders:TestTypeEnumDictionary}"/>
     <ObjectDataProvider x:Key="DutPackageType" MethodName="GetDutPackageType" ObjectType="{x:Type dataProviders:TestTypeEnumDictionary}"/>
+    <ObjectDataProvider x:Key="AttestationType" MethodName="GetAttestationType" ObjectType="{x:Type dataProviders:TestTypeEnumDictionary}"/>
     
     
 
